--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         Notification.requestPermission().then(function (permission) {
           if (permission === 'granted') {
             // If the user grants permission, obtain the token
-            getToken();
+            registerWorker();
           } else {
             console.log('Permission denied for notifications.');
             // Update UI with an error message
@@ -78,26 +78,52 @@
     }
 
     // Obtain the FCM token
-    function getToken() {
+    function registerWorker() {
+      document.getElementById("token").innerHTML = "Loading...";
       navigator.serviceWorker.register("./firebase-messaging-sw.js")
         .then((registration) => {
-          return messaging.getToken({ serviceWorkerRegistration: registration });
-        })
-        .then((currentToken) => {
-          if (currentToken) {
-            console.log("Firebase Token", currentToken);
-            // Update UI with the obtained token
-            document.getElementById("token").innerHTML = currentToken;
-          } else {
-            // Update UI with an error message
-            document.getElementById("error").innerHTML = "No registration token available. Request permission to generate one.";
+          var serviceWorker;
+          if (registration.installing) {
+            serviceWorker = registration.installing;
+          } else if (registration.waiting) {
+            serviceWorker = registration.waiting;
+          } else if (registration.active) {
+            serviceWorker = registration.active;
+          }
+
+          if (serviceWorker) {
+            if (serviceWorker.state == "activated") {
+              //If service worker is already activated
+              getToken(registration);
+            }
+            serviceWorker.addEventListener("statechange", function (e) {
+              // If service worker is now activated
+              if (e.target.state == "activated") {
+                getToken(registration);
+              }
+            });
           }
         })
+
         .catch((err) => {
           console.log("An error occurred while retrieving token. ", err);
           // Update UI with an error message
           document.getElementById("error").innerHTML = "An error occurred while retrieving token. " + err;
+          document.getElementById("token").innerHTML = "";
         });
+    }
+
+    function getToken(registration) {
+      messaging.getToken({ serviceWorkerRegistration: registration }).then((currentToken) => {
+        if (currentToken) {
+          console.log("Firebase Token", currentToken);
+          // Update UI with the obtained token
+          document.getElementById("token").innerHTML = currentToken;
+        } else {
+          // Update UI with an error message
+          document.getElementById("error").innerHTML = "No registration token available. Request permission to generate one.";
+        }
+      })
     }
 
   </script>
